Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33175

Can't navigate menu with keyboard

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.0
    • 5.1.0
    • Quick: Controls 1
    • None
    • Windows 7, Qt 5.1.0 32bit, also 5.1.2 built from git (stable branch as of today)
    • qtquickcontrols:82081e737038262c82c2e408d412fc80a607bf9f

      It's not possible to navigate the menus created by QtQuick.Controls using the keyboard. I would expect it to work with cursor keys as well as the usual ALT+Letter combination for items that have assigned one.

      It can only be brought up by mouse clicking if used in a MenuBar. Using the "&" symbol as with the widget-based QMenu (QAction) seems to be ignored (as in "&File"). If I call the "popup()" method on Menu, it will always appear below the mouse pointer, and again, keyboard navigation is not possible.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dedietri Gabriel de Dietrich (drgvond)
            pyrrhula Ola Røer Thorsen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes