Menu: Fix keyboard navigation on Windows

The Windows QPA plugin doesn't trigger activated window events for popups,
resulting on the popup window not being the application focus window, and
therefore, the popup window's content item not getting focus. This results
in key pressed events not being sent to the menu item.

We workaround this by emitting the window activated event ourselves right
after the popup window is exposed.

Task-number: QTBUG-33175
Change-Id: I77d1eb33b71af2232a6be6d0f7c6b480bffc10d4
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>
Reviewed-by: Jens Bache-Wiig <jens.bache-wiig@digia.com>